# bread

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  Makefile  README.md  RELEASE.md  bread.spec  pyproject.toml
.github/workflows/: release.yml
data/: bread-snapshot.service  bread-snapshot.timer  bread.desktop  org.bread.policy
scripts/: build-rpm.sh
src/bread/: lib.py
src/bread/cli/: config.py  list.py  main.py  purge.py  revert.py  rollback.py  snapshot.py
src/bread/gui/: app.py  window.py  wizard.py
